# atsaml11xxx-hal

./: .gdb_history  Cargo.toml  Makefile  README.md
examples/: blink.rs  hello.rs  rng.rs
src/: clock.rs  gpio.rs  lib.rs  prelude.rs  rng.rs
src/crypto/: mod.rs
src/sercom/: mod.rs  pads.rs  spi.rs
